--- a/templates/about.html
+++ b/templates/about.html
@@ -3,5 +3,6 @@
 {% block content %}
 <div class="container">
     <h1>About 페이지</h1>
+    <h3>우리는 사람들이 자신이 사랑하는 음악을 다른 사람에게 알려주고, 그 과정 속에서 자신이 알지 못했던 음악을 찾아낼 수 있는 서비스를 제공하고 있습니다.</h3>
 </div>
 {% endblock %}
