--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,9 +8,9 @@
     <link rel="icon" href="../../../../favicon.ico">
 
     {% if title %}
-      <title>Flask 블로그 - {{ title }}</title>
+      <title>음악 지식in - {{ title }}</title>
     {% else %}
-      <title>Flask 블로그</title>
+      <title>음악 지식in</title>
     {% endif %}
 
     <!-- Bootstrap core CSS -->
@@ -29,26 +29,38 @@
   <body>
     <header class="site-header">
       <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark mb-4">
-        <a class="navbar-brand" href="{{ url_for('index') }}">Flask 블로그</a>
+        <a class="navbar-brand" href="{{ url_for('index') }}">음악 지식in</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+              <a class="nav-link" href="{{ url_for('index') }}">Agora</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('about') }}">About</a>
             </li>
           </ul>
 
+
           <!-- Navbar right side -->
+      {% if session['logged_in'] %}
+      <div class="navbar-nav mt-mb-0">
+        <a class="nav-item nav-link" href="{{ url_for('profile') }}">내 프로필</a>
+        <a class="nav-item nav-link" href="/logout">logout</a>
+      </div>
+
+          {% else %}
           <div class="navbar-nav mt-mb-0">
-            <a class="nav-item nav-link" href="{#{ url_for('login') }#}">Login</a>
-            <a class="nav-item nav-link" href="{#{ url_for('registration') }#}">Register</a>
+            <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+            <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
           </div>
+
+        {% endif %}
         </div>
+
+
       </nav>
     </header>
 
@@ -66,11 +78,11 @@
             integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    
+
     <!-- Font awesome -->
     <script defer src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"
             integrity="sha384-4oV5EgaV02iISL2ban6c/RmotsABqE4yZxZLcYMAdG7FAPsyHYAPpywE9PJo+Khy" crossorigin="anonymous"></script>
-    
+
     <!-- Custom scripts -->
     {% block scripts %}{% endblock %}
   </body>
